# macarrao

./: Makefile  README.md  pyproject.toml
src/: main.py
src/domain/groups/: __init__.py  fazer_macarrao.py
src/domain/models/: __init__.py  dependency_injection.py  injection.py  macarrao.py  panela.py
src/domain/services/bridges/: __init__.py  core_bridge.py
src/domain/services/controllers/: __init__.py  cozinhar_controller.py  encher_de_agua_controller.py  ferver_controller.py
src/domain/services/factories/: __init__.py  core_dependency_injection_factory.py  macarrao_factory.py  panela_factory.py
src/domain/usecases/: __init__.py  cozinhar_macarrao.py  ferver_agua.py  get_injection.py
src/entrypoints/routes/: fazer_macarrao.py
src/infrastructure/core_bridge_adapters/: __init__.py  core_bridge_adapter.py
src/infrastructure/core_dependency_injections_factories/: __init__.py  core_dependency_injections_factory_json.py
src/infrastructure/cozinhar_controllers/: cozinhar_controller_fogao.py
src/infrastructure/encher_de_agua_controllers/: encher_de_agua_controller_pia.py
src/infrastructure/ferver_controllers/: fever_controller_fogao.py
src/infrastructure/macarrao_factories/: macarrao_factory_espaguete.py
src/infrastructure/panela_factories/: panela_factory_media.py
utils/: dependency_injections.json
