[tool.poetry]
name = "macarrao"
version = "0.1.0"
description = ""
authors = ["pedronunes-devrise <pedronunes.devrise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bandit = "^1.7.4"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = "^1.10.7"
alembic = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.code-quality.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
bandit = "^1.7.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[tool.flake8]
per-file-ignores = "_init_.py:F401"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[tool.mypy]
mypy_path = "src"
exclude = "tests"
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"